# pokedex-scraping

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
pokemon/pokemon/: items.py  middlewares.py  pipelines.py  settings.py
pokemon/pokemon/spiders/: pokemon_spider.py
pokemons/: scrapy.cfg
pokemons/pokemons/: items.py  middlewares.py  pipelines.py  settings.py
pokemons/pokemons/spiders/: pokemon.py  pokemons_spider.py
