[tool.poetry]
name = "pokemon-scraping"
version = "1.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"
readme = "README.md"
packages = [{include = "pokemon_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.7.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
