[tool.poetry]
name = "pokemon-scraping"
version = "1.0.1"
description = "A small project to retrieve information about all Pokemon from the official pokedex."
authors = ["Maxence Lambard <maxence.lambard@icloud.com>"]
license = "MIT Licence"
readme = "README.md"
packages = [{include = "pokemon_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.7.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
